# llvm-learn

./: README.md
llvm-cmake/: instrument_functions.cpp
llvm-cmake/demo1_find_package_install/: CMakeLists.txt  instrument_functions.cpp
llvm-cmake/demo2_find_package_manual_set/: CMakeLists.txt
llvm-dot/: 1.ll  callgraph.dot  cfg.main.dot
llvm-dot/llvm-dot-demo1-only-mainFunc/callgraph/: callgraph.dot  main.c  main.ll
llvm-dot/llvm-dot-demo1-only-mainFunc/cfg-control-flow-graph/: cfg.main.dot  run.sh
llvm-dot/llvm-dot-demo1-only-mainFunc/cfg-control-flow-graph-O0/: cfg.main.dot  main.ll  run.sh
llvm-dot/llvm-dot-demo1-only-mainFunc/cfg-control-flow-graph-O1/: cfg.main.dot  main.ll  run.sh
llvm-dot/llvm-dot-demo1-only-mainFunc/cfg-control-flow-graph-O2/: cfg.main.dot  main.c  run.sh
llvm-dot/llvm-dot-demo1-only-mainFunc/cfg-control-flow-graph-O3/: cfg.main.dot  main.ll  run.sh
llvm-dot/llvm-dot-demo2-not-only-mainFunc/callgraph/: callgraph.dot  main.ll  run.sh
llvm-dot/llvm-dot-demo2-not-only-mainFunc/cfg-control-flow-graph/: cfg.add.dot  cfg.main.dot  cfg.sub.dot  main.c  run.sh
llvm-gsd-cfg/: cfg.gsd.dot  gsd.c  gsd.ll  run.sh
llvm-helloPass/: Hello.cpp  input.ll  mkHelloPass.sh  myHelloPass.cpp
llvm-pass/: Hello.cpp  test.c  test.ll
llvm-src-to-ir/base-var/: var.c  var.ll  var.s
llvm-src-to-ir/if/: if  if.c  if.ll
llvm-src-to-ir/loop/: loop.c  loop.ll
llvm-src-to-ir/struct/: strucO0.ll  struct.c
